--- a/app/src/main/res/layout/content_favourite.xml
+++ b/app/src/main/res/layout/content_favourite.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fav_recyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="4dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_favourite">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fav_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
-
-
-</RelativeLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v7.widget.RecyclerView>
