--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -12,13 +12,8 @@
         android:theme="@style/AppTheme.AppBarOverlay"
         app:elevation="4dp">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+       <include layout="@layout/toolbar"
+           android:id="@+id/toolbar"/>
 
 
         <android.support.design.widget.TabLayout
