--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
         <attr name="myfillColor" format="color" />
     </declare-styleable>
     <declare-styleable name="pull">
-        <attr name="header" format="reference|integer" />
+        <attr name="subHeader" format="reference|integer" />
         <attr name="maxHeaderHeight" format="reference|dimension" />
         <attr name="minHeaderHeight" format="reference|dimension" />
     </declare-styleable>
