--- a/app/src/main/res/layout/recycler_view_header.xml
+++ b/app/src/main/res/layout/recycler_view_header.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/header_title"
+    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
     tools:text="Beard Styles"
-    android:textColor="@color/text_primary_dark"
     android:paddingLeft="16dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp">
